removing old files, switching everything over to index.html, and fixing the dropdown

--- a/assets/style.css
+++ b/assets/style.css
@@ -22,3 +22,8 @@ git checkout -b 'your initials *' git add -A git commit -m '' git checkout main/
 @media screen {
     
 }
+
+
+.top-img{
+ height: 200px;
+}
