--- a/BULMA.WORK/css/bulma-rtl.css
+++ b/BULMA.WORK/css/bulma-rtl.css
@@ -3274,7 +3274,7 @@ a.tag:hover {
 /* Bulma Form */
 .input, .textarea, .select select {
   background-color: white;
-  border-color: #dbdbdb;
+  border-color: black;
   border-radius: 4px;
   color: #363636;
 }
