--- a/assets/stylesheet-page2.css
+++ b/assets/stylesheet-page2.css
@@ -69,3 +69,7 @@ li button{
 min-height: 50px;
 border: 1px solid grey;
 }
+
+[contentEditable=true]:empty:not(:focus):before{
+    content:attr(data-text)
+}
