--- a/assets/style3.css
+++ b/assets/style3.css
@@ -1,24 +1,39 @@
-.callout{
-    min-width: 100%;
-    min-height: 40vh;
-    background-color: #dbdee0;
+container{
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
-}
-
-#card-0-img{
-    width: 200px;
-    height: 300px;
-    background: rgba(0, 0, 0, 0.05);
-    backdrop-filter: blur(25px);
-    padding: 15px;
-    border-radius: 20%;
-    margin-right: 10px;
-}
-#recipe-save-1{
-    justify-content: flex-end;
-    margin-top: 200px;
+    }
+    .card{
+        margin: 20px;
+        padding: 10px;
+        width: 200px;
+        background-color: rgb(226, 219, 176);
+        border-radius: 9px;
+            /* offset-x | offset-y | blur-radius | spread-radius | color */
+            /* -webkit-box-shadow: -2px -1px 15px 7px rgba(0,0,0,0.5);
+            -moz-box-shadow: -3px -2px 30px 14px rgba(0,0,0,0.425); */
+            box-shadow: -4px -3px 45px 21px rgba(0,0,0,0.35);
+        }
+    
+    img{
+        margin-bottom: 20px;
+    }
+    
+    .buttoncard{
+        margin-left: 60px;
+        background-color: lightblue;
+       color:black;
+        width: 45%;
+        font-size: 12px;
+        border-radius: 10px;
+        display: inline;
+    
+    }
+    .buttoncard:hover{
+        border-radius: 8px;
+        background-color:green(160, 25, 25);
+        color: red;
+       }
 }
 
 
