pull before push

--- a/assets/stylesheet-page2.css
+++ b/assets/stylesheet-page2.css
@@ -1,7 +1,9 @@
 body{
     font-size: large;
     background-color: white;
+
 }
+
 .top-bar{
     font-family: sans-serif;
     background-image:url("https://images.fineartamerica.com/images/artworkimages/mediumlarge/2/cute-kawaii-food-pattern-valentina-hramov.jpg");
@@ -28,23 +30,10 @@ h1{
 
 }
 
-
-<<<<<<< HEAD
-.hero.is-info {
-    background-color: #ffffff;
-    color: #fff;
-}
-
-.title{
-    padding-bottom: 15px;
-=======
 .hero.is-info.is-small {
     background-color: #FFFFFF;
     color: #fff;
->>>>>>> c9d6d833c9b679f65d35c54fe342b6c0139b9e8f
 }
-
-
 
 .hero-body{
     background-color: rgb(214 217 220);
@@ -54,16 +43,17 @@ h1{
     padding-bottom: 15px;
 }
 
-
 .sider{
     background-color: rgb(214 217 220);
     margin-top: 12px;
     margin-bottom: 12px;
+
 }
 
 .button{
     margin-top: 1em;
     background-color: rgb(214 217 220);
+    border-radius: 5px;
 }
 
 .fa-plus{
@@ -72,12 +62,14 @@ h1{
 }
 
 .footer{
-    justify-items: center;
+    justify-content: center;
     padding: 0;
     margin-top: 1em;
     background-color: white;
-    display: block;
+    display: flex;
+    flex-wrap: wrap;
     margin-bottom: 12px;
+
 }
 
 li button{
@@ -87,31 +79,51 @@ li button{
 
 }
 
-.card-header-title{
-    max-width: 100%;
-
-}
-
-.text-input-for-recipe{
-    width: 100%;
-min-height: 50px;
-border: 1px solid grey;
-
-}
-
 [contentEditable=true]:empty:not(:focus):before{
     content:attr(data-text)
 }
 
 .card-header-title{
-    max-width: 100%;
+    max-width: 80%;
+    background-color: #ffffff;
+    display: flex;
+    justify-content: center;
+    border: 1px solid grey;
+    border-radius: 5px;
+    min-height: 50px;
+
+}
+
+.card-header {
+    background-color: transparent;
+    align-items: stretch;
+    box-shadow: none;
+    display: flex;
+    justify-content: center;
+    padding-top: 12px;
+
+}
+
+.card-content {
+    background-color: transparent;
+    padding: 1.5rem;
+    padding-top: 0px;
+   
+}
+
+.btn-container{
+    display: flex;
+    justify-content:space-between;
+    flex-wrap: wrap;
 
 }
 
 .text-input-for-recipe{
     width: 100%;
-min-height: 50px;
-border: 1px solid grey;
+    min-height: 50px;
+    border: 1px solid grey;
+    background-color: rgb(255, 255, 255);
+    border-radius: 5px;
 
 }
 
@@ -126,6 +138,7 @@ border: 1px solid grey;
 
 .container{
     justify-content: center;
+
 }
 
 .save-recipe{
@@ -135,18 +148,17 @@ border: 1px solid grey;
 
 .favorite-btn{
     margin-right: 12px;
+}
 
+.button.is-hovered, .button:hover {
+    border-color: #4a4a4a;
+    color: red;
 }
 
 .fa-plus:before {
     content: "\f067";
     background-color: rgb(214 217 220);
     align-items: center;
-}
-
-.remove-recipe-btn{
-    margin-right: 12px;
-
 }
 
 .columns:not(:last-child) {
@@ -170,7 +182,22 @@ p{
     margin-top: 12px;
 }
 
+i {
+    font-style:normal;
+}
+
 .text-input-for-recipe {
-padding-left: 5px;
+    padding-left: 5px;
+
+}
+
+.card {
+    background-color: rgb(255 246 231);
+    box-shadow: 0 0.5em 1em -0.125em rgb(10 10 10 / 10%), 0 0 0 1px rgb(10 10 10 / 2%);
+    color: #4a4a4a;
+    max-width: 100%;
+    position: relative;
+    border-radius: 9px;
+    box-shadow: -4px -3px 30px 6px rgb(0 0 0 / 35%);
 
 }
