--- a/assets/style.css
+++ b/assets/style.css
@@ -15,37 +15,47 @@
     
 }
 
-
 .top-img{
  height: 200px;
-}
 
+}
 
 span {
     color: black;
-    background-color: white;
-    opacity: 75%;
     border: none;
 }
 
-
-.subtitle {
-    
+.subtitle { 
     font-weight: bolder;
     font-style: oblique;
 }
 
 #main-title {
-    
     font-weight: bolder;
     font-style: normal;
+
 }
 
+.hero-body{
+    display: flex;
+    justify-content: center;
+}
+
+.has-text-centered{
+    background-color: rgb(255, 255, 255);
+    opacity: 75%;
+    width: 50%;
+    position: absolute;
+    top: 9px;
+    display: block;
+    justify-content: center;
+    flex-wrap: wrap;
+ 
+}
 
 #header-pic {
     background-image:url("https://images.fineartamerica.com/images/artworkimages/mediumlarge/2/cute-kawaii-food-pattern-valentina-hramov.jpg");
-        /* background-attachment: fixed; */
-     background-repeat: no-repeat;
+    background-repeat: no-repeat;
     background-size:cover;
     justify-content: center;
     height: 200px;
@@ -53,63 +63,134 @@ span {
     width: 100%;
 
 }
+
 container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
 }
-    .card{
-        height: 300px;
-        width: 200px;
-        margin: 20px;
-        padding: 10px;
-        width: 200px;
-        justify-content: center;
-        background-color: rgb(239 239 239);
-        border-radius: 9px;
-            /* offset-x | offset-y | blur-radius | spread-radius | color */
-            /* -webkit-box-shadow: -2px -1px 15px 7px rgba(0,0,0,0.5);
-            -moz-box-shadow: -3px -2px 30px 14px rgba(0,0,0,0.425); */
-            box-shadow: -4px -3px 45px 21px rgba(0,0,0,0.35);
-        }
-    
-    img{
-        margin-bottom: 20px;
-        position: absolute;
-        bottom: 45px;
-        display: block;
-        width: 80%;
-        align-content: center;
-        right: 20px;
 
-    }
+.card{
+    height: 300px;
+    width: 200px;
+    margin: 20px;
+    padding: 10px;
+    width: 200px;
+    justify-content: center;
+    background-color: rgb(255 246 231);
+    border-radius: 9px;
+    box-shadow: -4px -3px 45px 21px rgba(0,0,0,0.35);
+}
     
-    .buttoncard{
-        margin-left: 60px;
-        background-color: gray;
-       color:white;
-        width: 45%;
-        font-size: 12px;
-        border-radius: 10px;
-        display: inline;
-        position: absolute;
-        bottom: 15px;
-        right:15px;
+img{
+    margin-bottom: 20px;
+    position: absolute;
+    bottom: 45px;
+    display: block;
+    width: 80%;
+    align-content: center;
+    right: 20px;
+
+}
     
-    }
-    .buttoncard:hover{
-        border-radius: 8px;
-        background-color:green(160, 25, 25);
-        color: red;
-    }
-
-
+.buttoncard{
+    margin-left: 60px;
+    background-color: rgb(214 217 220);
+    color:black;
+    width: 45%;
+    font-size: 12px;
+    border-radius: 5px;
+    border: 1px;
+    border-color: rgb(214 217 220);
+    display: inline;
+    position: absolute;
+    bottom: 15px;
+    right:15px;
+    
+}
 
 .hero.is-info {
     background-color: white;
     color: #fff;
+
 }
 
 footer {
     width: 100%;
+}
+    
+img{
+    margin-bottom: 20px;
+    position: absolute;
+    bottom: 45px;
+    display: wrap;
+    width: 80%;
+    align-items: center;
+
+}
+
+.buttoncard.is-hovered, .buttoncard:hover{
+    border-color: #4a4a4a;
+    border: 1px;
+    color: red;
+
+}
+
+/* i.fa-heart:hover{
+    color: red;
+    border-color: #4a4a4a;
+    border: 1px;
+} */
+
+.is-info {
+    background-color: rgb(214 217 220);
+    color: rgb(0, 0, 0);
+}
+
+.level-right{
+    margin-right: 15px;
+}
+
+.active.post-img i{
+    animation: heart 1s linear;
+}
+
+@keyframes heart {
+    0%{
+        opacity: 0;
+        transform: scale(0);
+    }
+    50%{
+        opacity: 1;
+        transform: scale(6);
+    }
+}
+
+.reactions{
+    margin-top: 1rem;
+}
+
+.reactions i{
+    font-size: 1.5rem;
+    cursor: pointer;
+}
+
+.react-links i{
+    margin-right: 10px;
+}
+
+.caption{
+    margin-top: 10px;
+    display: flex;
+}
+
+.caption .profile-name{
+    font-size: 1rem;
+    font-weight: 800;
+    margin-right: 10px;
+}
+
+.level{
+    margin-top: 9px;
+    flex-wrap: wrap;
 }
