--- a/assets/style3.css
+++ b/assets/style3.css
@@ -2,142 +2,62 @@ container{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    }
-    .card{
-        height: 300px;
-        width: 200px;
-        margin: 20px;
-        padding: 10px;
-        width: 200px;
-        justify-content: center;
-        background-color: rgb(226, 219, 176);
-        border-radius: 9px;
-            /* offset-x | offset-y | blur-radius | spread-radius | color */
-            /* -webkit-box-shadow: -2px -1px 15px 7px rgba(0,0,0,0.5);
-            -moz-box-shadow: -3px -2px 30px 14px rgba(0,0,0,0.425); */
-            box-shadow: -4px -3px 45px 21px rgba(0,0,0,0.35);
-        }
-    
-    img{
-        margin-bottom: 20px;
-        position: absolute;
-        bottom: 45px;
-        display: wrap;
-        width: 80%;
-        align-items: center;
-    }
-    
-    .buttoncard{
-        margin-left: 60px;
-        background-color: gray;
-       color:white;
-        width: 45%;
-        font-size: 12px;
-        border-radius: 10px;
-        display: inline;
-        position: absolute;
-        bottom: 15px;
-        right:15px;
-    
-    }
-    .buttoncard:hover{
-        border-radius: 8px;
-        background-color:green(160, 25, 25);
-        color: red;
-       }
+
 }
+
+.card{
+    height: 300px;
+    width: 200px;
+    margin: 20px;
+    padding: 10px;
+    justify-content: center;
+    background-color: rgb(255 246 231);
+    border-radius: 9px;
+    box-shadow: -4px -3px 45px 21px rgba(0,0,0,0.35);
+
+}
+    
+img{
+    margin-bottom: 20px;
+    position: absolute;
+    bottom: 45px;
+    display: wrap;
+    width: 80%;
+    align-items: center;
+
+}
+    
+.buttoncard{
+    margin-left: 60px;
+    background-color: rgb(214 217 220);
+    color:black;
+    width: 45%;
+    font-size: 12px;
+    border-radius: 5px;
+    border: 1px;
+    border-color: rgb(214 217 220);
+    display: inline;
+    position: absolute;
+    bottom: 15px;
+    right:15px;
+    
+}
+
+.buttoncard:hover{
+    border-radius: 8px;
+    background-color:green(160, 25, 25);
+    color: red;
+
+}
+
 
 .is-info {
-    background-color: #ffffff;
-    color: #fff;
+    background-color: rgb(214 217 220);
+    color: rgb(0, 0, 0);
 }
 
-
-/* @import url('https://fonts.googleapis.com/css2?family=Blinker:wght@300;400&display=swap');
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Blinker',sans-serif;
-    color: white;
-}
-
-i{
-    font-weight: 100;
-    color: white;
-}
-
-.callout{
-    min-width: 100%;
-    min-height: 40vh;
-    background-color: #091921;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.callout{
-    width: 400px;
-    height: 600px;
-    background: rgba(255, 255, 255, 0.05);
-    backdrop-filter: blur(15px);
-    padding: 15px;
-    border-radius: 15px;
-}
-
-.head .lead{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-bottom: 12px;
-}
-
-.profile-detail{
-    display: flex;
-    align-items: center;
-}
-
-.profile-detail .p-img{
-    width: 50px;
-    height: 50px;
-    border: 3px solid #c31432;
-    border-radius: 50%;
-    margin-right: 10px;
-    overflow: hidden;
-}
-
-.card-1-title.lead .p-img img{
-    width: 100%;
-    height: 100%;
-}
-
-.profile-detail .name{
-    font-size: 1.5rem;
-}
-
-.more i{
-    font-size: 1.5rem;
-    cursor: pointer;
-}
-
-.post-img{
-    height: 70%;
-    width: 100%;
-    position: relative;
-}
-.post-img img{
-    width: 100%;
-    height: 100%;
-}
-
-.post-img i{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    opacity: 0;
-    /* transition: 1s; */
+.level-right{
+    margin-right: 15px;
 }
 
 .active.post-img i{
@@ -181,4 +101,8 @@ i.fa-heart:hover{
     font-size: 1rem;
     font-weight: 800;
     margin-right: 10px;
-} */
+}
+
+.level{
+    margin-top: 9px;
+}
