--- a/assets/style.css
+++ b/assets/style.css
@@ -46,11 +46,10 @@ span {
     opacity: 75%;
     width: 50%;
     position: absolute;
-    top: 9px;
-    display: block;
+    top: 10%;
+    display: relative;
     justify-content: center;
     flex-wrap: wrap;
- 
 }
 
 #header-pic {
@@ -61,7 +60,6 @@ span {
     height: 200px;
     margin-bottom: 20px;
     width: 100%;
-
 }
 
 container {
@@ -77,7 +75,7 @@ container {
     padding: 10px;
     width: 200px;
     justify-content: center;
-    background-color: rgb(255 246 231);
+    background-color: rgba(235, 238, 241, 0.822);
     border-radius: 9px;
     box-shadow: -4px -3px 45px 21px rgba(0,0,0,0.35);
 }
@@ -90,7 +88,6 @@ img{
     width: 80%;
     align-content: center;
     right: 20px;
-
 }
     
 .buttoncard{
@@ -102,7 +99,7 @@ img{
     border-radius: 5px;
     border: 1px;
     border-color: rgb(214 217 220);
-    display: inline;
+    display: block;
     position: absolute;
     bottom: 15px;
     right:15px;
